--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -636,6 +636,8 @@
 	"edt_conf_v4l2_cropTop_expl" : "Count of pixels on the top side that are removed from the picture.",
 	"edt_conf_v4l2_cropBottom_title" : "Crop bottom",
 	"edt_conf_v4l2_cropBottom_expl" : "Count of pixels on the bottom side that are removed from the picture.",
+	"edt_conf_v4l2_cecDetection_title" : "CEC detection",
+	"edt_conf_v4l2_cecDetection_expl" : "If enabled, usb capture will be temporarily disabled when CEC standby event received from HDMI bus.",
 	"edt_conf_v4l2_signalDetection_title" : "Signal detection",
 	"edt_conf_v4l2_signalDetection_expl" : "If enabled, usb capture will be temporarily disabled when no signal was found. This will happen when the picture fall below the threshold value for a period of 4 seconds.",
 	"edt_conf_v4l2_redSignalThreshold_title" : "Red signal threshold",
